--- a/MapBox/Views/Shared/_Layout.cshtml
+++ b/MapBox/Views/Shared/_Layout.cshtml
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
+    <link href="~/LogoMakr_1oSLWM.ico" rel="shortcut icon" type="image/x-icon" />
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
@@ -35,6 +36,7 @@
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Species", "Index", "Species")</li>
+                    <li>@Html.ActionLink("Speciesv2", "Index2", "Species")</li>
                 </ul>
             </div>
         </div>
